# trainings

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml
.circleci/: config.yml
alembic/: env.py
alembic/versions/: 19d985747cb1_create_reaction_table.py  47c6073d103f_create_tables.py  77cec32dfd76_create_friendship_request_table.py  97087f64399a_create_friendship_table.py  e3c4fd9a8e11_create_friendship_request_table.py  fa7f1a43582b_create_user_and_training_tables.py
app/: api.py  config.py  database.py  enums.py  helpers.py  jwt_tokens.py  models.py  rabbitmq.py  tasks.py
app/domain/: entities.py  repositories.py
app/domain/repositories/: base.py  friendship_repository.py  friendship_request_repository.py  reaction_repository.py  training_repository.py  user_repository.py
app/graphql/: data_loaders.py  exceptions.py  input_types.py  mutations.py  permissions.py  queries.py  schema.py  subscriptions.py  types.py  validators.py
app/models/: __init__.py  friendship_requests.py  friendships.py  profiles.py  reactions.py  trainings.py  users.py
tests/: conftest.py  factories.py
tests/factories/: __init__.py  friendships.py  profiles.py  reactions.py  trainings.py  users.py
tests/test_api/: conftest.py  skip_test_new_friends_training_feed.py  test_create_training.py  test_create_user.py  test_get_training.py  test_get_trainings.py  test_get_user_trainings.py  test_login_user.py  test_new_friends_training_feed.py
tests/test_domain/: test_repositories.py
tests/test_graphql/: test_validators.py
utils/: app-entrypoint.sh
(+45 files in other folders)
